/*
 * $Id: ChangeLog,v 1.53 2003/06/08 08:29:02 patrickmast Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-08 10:50 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * source/_winsys.c
   * fixed GetCommandLine()

2003-07-08 10:27 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * source/_winsys.c
   * fixed GetCommandLine() as provided by Brian Hays

2003-05-28 13:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/_winsys.c
    * cast at 1161 for msvc

2003-03-29 18:40 UTC+0100 Ian Anderson <i.anderson@procon-online.de>
   * source\_winsys.c
      + GetConsoleWindow()
      + SetConsoleTitle()
      + GetProcessWorkingSize()
      + SetProcessWorkingSize()
      + VirtualQuery() - may not be functional, always seems to return error
      + VirtualLock()  - may not be functional, always seems to return error

2003-03-29 13:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
   * makefile.nt
     + -q0 to Harbour flags

2003-02-11 21:14 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * source/_winclpb.c 
      ! GETCLIPBOARDFORMATNAME
        removed unused cchMaxCount
   * source/_windll.c 
      ! CALLDLL
        removed unused float  FltParms[15];
   * source/_wininet.c 
      ! FTPCOMMAND
        phFtpCommand  should be an HINTERNET, not a pointer.
   * source/_winhead.c 
      ! HEADER_GETITEM
        hdi should be an HDITEM, not a pointer to it.
   * source/_winmenu.c 
      ! added cast in call to GetMenuItemInfo
   * source/_winlv.c 
      ! LISTVIEWNOTIFY
        commented out unused szString decl
   * source/_winsys.c 
      ! GETUSERNAME
        nSize is a DWORD, not a pointer.
      ! GETVERSIONEX
        msvc didn't like the OSVERSIONEX* cast
   * source/_winsock.c
      + added #define _WINSOCKAPI_
      ! This prevents the inclusion of Winsock.h in Windows.h