@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.53 2003/06/08 08:29:02 patrickmast Exp $
+ * $Id: ChangeLog,v 1.54 2003/06/08 08:53:21 patrickmast Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-02 15:39 UTC+0100 Patrick Mast <patrick@winfakt.com>
+  * source/_winreg.c
+   * fixed HB_FUNC( REGENUMKEYEX )
+     return value's corrected
 
 2003-07-08 10:50 UTC+0100 Patrick Mast <patrick@winfakt.com>
   * source/_winsys.c
